created a stable base autotools system and added x86_64 startup

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,10 @@
 AUTOMAKE_OPTIONS = subdir-objects
+
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}
+
+AM_CFLAGS = -I$(srcdir)/include -nostdlib -nostartfiles
+AM_LDFLAGS = -nostdlib -nostartfiles 
+
 bin_PROGRAMS = vloader
-vloader_SOURCES = main/vloader.c
+
+vloader_SOURCES = main/vloader.c arch/@ARCH@/entry.S
